Removes text decoration from active links on cart pages, and removes horizontal scrolling issue on order_pay page

--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -12,6 +12,10 @@ a:hover {
   color: black;
 }
 
+a:active {
+  text-decoration: none;
+}
+
 body {
   font-family: 'Raleway', sans-serif;
 }
@@ -25,7 +29,6 @@ h4 {
 }
 
 input {
-  margin: 5px;
   height: 40px;
 }
 
